[package]
name = "tau"
version = "0.9.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
homepage = "https://gxi.cogitri.dev"
description = "GTK frontend, written in Rust, for the Xi editor"
repository = "https://gitlab.gnome.org/World/tau"
keywords = ["gxi", "xi", "tau"]
categories = ["editor"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = []

gtk_v3_22 = ["gtk/v3_22"]

[dependencies]
cairo-rs = "0.7"
crossbeam-channel = "0.3"
editview = { path="../editview" }
enclose = "1"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
gdk = "0.11"
gdk-pixbuf = "0.7"
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = "0.7"
glib = "0.8"
gschema-config-storage = { path="../gschema-config-storage" }
gtk = { version="0.7", features = ["v3_20"] }
human-panic = "1"
log = "0.4"
pango = { version="0.7", features = ["v1_38"] }
pangocairo = "0.8"
parking_lot = "0.8"
serde = { version="1", features = ["derive"] }
serde_json = "1"
syntect = "3"
tokio = "0.1"
xrl = "0.0.7"

[dev-dependencies]
cargo-husky = { version="1", default-features = false, features = ["user-hooks"] }
