[package]
name = "tau"
version = "0.11.3"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
homepage = "https://gxi.cogitri.dev"
description = "GTK frontend, written in Rust, for the Xi editor"
repository = "https://gitlab.gnome.org/World/tau"
keywords = ["gxi", "xi", "tau"]
categories = ["editor"]
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
cairo-rs = ""
chrono = "0.4"
crossbeam-channel = "0.4"
dirs = "2"
editview = { path="../editview" }
env_logger = "0.7"
futures = "0.1"
gdk = ""
gdk-pixbuf = ""
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = ""
glib = ""
gtk = { version="0.8", features=["v3_20"] }
human-panic = "1"
libhandy = "0.5"
log = "0.4"
pango = ""
pangocairo = ""
parking_lot = "0.10"
serde = { version="1", features = ["derive"] }
serde_json = "1"
syntect = "3"
tau-rpc = { path="../tau-rpc" }
tokio = "0.1"
vte-rs = "0.3"
xrl = "0.0.8"
